# motionbuilder-inbetweener

./: .gitignore  LICENSE  MANIFEST.in  README.md  pose_inbetween.py  pyproject.toml
actionscript/: in_betweener.py
manual_installation/: drag_n_drop_installer.py  register_inbetweener.py
motionbuilder_inbetweener/: __init__.py  actionscript.py  pose_inbetween.py  style.qss  tool.py  ui.py
src/: pose_inbetween.py  style.qss  ui.py
