[project]
name = "motionbuilder-inbetweener"
version = "1.1.0"
description = "A tool for Autodesk MotionBuilder to create in-between keyframes for selected object(s) or the active character."
readme = "README.md"
license = "MIT-0"
authors = [
    { name = "Nils Söderman" }
]

[project.urls]
repository = "https://github.com/nils-soderman/motionbuilder-inbetweener"

[tool.setuptools.packages.find]
where = ["."]
include = ["motionbuilder_inbetweener*"]